[package]
name = "kinds"
version = "0.1.0"
edition = "2021"
license-file = "./LICENSE"
description = "Higher-Kinded Types simulated by GATs"
readme = "./README.md"
repository = "https://github.com/ireina7/kinds"
keywords = ["hkt", "type", "functor", "functional-programming", "higher-kinded-type"]

[dependencies]
